--- a/FileSystem/FileSystem.csproj
+++ b/FileSystem/FileSystem.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bitmap.cs" />
     <Compile Include="Buffer.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="FileSystem.cs" />
