--- a/FileSystem/FileSystem.csproj
+++ b/FileSystem/FileSystem.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bitmap.cs" />
+    <Compile Include="Block.cs" />
     <Compile Include="Buffer.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="FileSystem.cs" />
