--- a/FileSystem/FileSystem.csproj
+++ b/FileSystem/FileSystem.csproj
@@ -41,14 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileDescriptor.cs" />
+    <Compile Include="OLDBitmap.cs" />
     <Compile Include="Bitmap.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="Buffer.cs" />
     <Compile Include="Driver.cs" />
-    <Compile Include="FileDescriptor.cs" />
+    <Compile Include="OLDFileDescriptorData.cs" />
     <Compile Include="FileSystem.cs" />
     <Compile Include="FSfile.cs" />
     <Compile Include="Ldisk.cs" />
+    <Compile Include="OLDMemcache.cs" />
     <Compile Include="Memcache.cs" />
     <Compile Include="OpenFileTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
