--- a/FileSystem/FileSystem.csproj
+++ b/FileSystem/FileSystem.csproj
@@ -42,13 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileDescriptor.cs" />
+    <Compile Include="FileDirectory.cs" />
     <Compile Include="OLDBitmap.cs" />
     <Compile Include="Bitmap.cs" />
     <Compile Include="Block.cs" />
     <Compile Include="Driver.cs" />
     <Compile Include="OLDFileDescriptorData.cs" />
     <Compile Include="FileSystem.cs" />
-    <Compile Include="FSfile.cs" />
     <Compile Include="Ldisk.cs" />
     <Compile Include="OLDMemcache.cs" />
     <Compile Include="Memcache.cs" />
